fix wall z-index

--- a/robots.css
+++ b/robots.css
@@ -33,7 +33,7 @@ body { margin: 0; width: 100%; max-height: 100vh; }
 	width: 100%; display: table-cell; 
 	text-align: center; vertical-align: middle; z-index: 110; }
 .board.pressed { transform: scale(99.5%); opacity: 90%; }
-.board.dragging { transform: scale(95%); opacity: 80%; }
+.board.dragging { transform: scale(95%); opacity: 90%; }
 .board .discarding { position: absolute; width: 100%; height: 100%;  top: 0; left: 0;
 	background: #000e; opacity: 100%; z-index: 120;
 	text-align: center; line-height: 400px; color: #ffff; }
@@ -58,7 +58,7 @@ body { margin: 0; width: 100%; max-height: 100vh; }
 	background: #ab48; }
 .robot.minirobot.main { background: #e054; }
 
-.wall { position: absolute; background: #850f; z-index: 100; border-radius: calc(0.5px + 1px); }
+.wall { position: absolute; background: #850f; border-radius: calc(0.5px + 1px); }
 .wall-x { width: calc(100% + 2px + 2px);  height: calc(1px + 2px);
 	left: calc(-1px - 1px); top: calc(100% - 1px); }
 .wall-y { width: calc(1px + 2px); height: calc(100% + 2px + 2px);
